--- a/app/src/main/res/layout/activity_testing_results.xml
+++ b/app/src/main/res/layout/activity_testing_results.xml
@@ -15,7 +15,7 @@
         layout="@layout/top_bar_layout"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_bar"
         android:layout_alignParentEnd="false"
