--- a/app/src/main/res/layout/activity_testing_stability.xml
+++ b/app/src/main/res/layout/activity_testing_stability.xml
@@ -17,7 +17,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/topBar"
+        android:layout_centerInParent="false"
+        android:layout_centerVertical="true"
         android:orientation="vertical">
 
         <ProgressBar
